k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memorandum-fe
  labels:
    app: memorandum-fe
spec:
  selector:
    matchLabels:
      app: memorandum-fe
  template:
    metadata:
      labels:
        app: memorandum-fe
    spec:
      containers:
      - name: memorandum-frontend
        image: gcr.io/dubh-cloud/memorandum-frontend:rel
        imagePullPolicy: Always
        ports:
        - containerPort: 80
