k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: memorandum-be-service
spec:
  type: ClusterIP
  selector:
    app: memorandum-be
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
