k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: memorandum-fe-service
spec:
  type: LoadBalancer
  selector:
    app: memorandum-fe
  ports:
    - protocol: TCP
      port: 8050
      targetPort: 80
  externalIPs:
  - "34.172.80.103"
