k8s/frontend-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: memorandum-dev
  name: memorandum-fe
  labels:
    app: memorandum-fe
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 1m"
spec:
  selector:
    matchLabels:
      app: memorandum-fe
  template:
    metadata:
      labels:
        app: memorandum-fe
    spec:
      containers:
      - name: memorandum-frontend
        image: gcr.io/dubh-cloud/memorandum-frontend:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: memorandum-dev
  name: memorandum-fe-service
spec:
  type: LoadBalancer
  selector:
    app: memorandum-fe
  ports:
    - protocol: TCP
      port: 8051
      targetPort: 80
  externalIPs:
  - "34.172.80.103"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: memorandum-dev
  name: memorandum-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "memo-dev.dufflin.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: memorandum-fe-service
            port:
              number: 8051
