k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memorandum-fe
  labels:
    app: memorandum-fe
spec:
  selector:
    matchLabels:
      app: memorandum-fe
  template:
    metadata:
      labels:
        app: memorandum-fe
    spec:
      containers:
      - name: memorandum-frontend
        image: gcr.io/dubh-cloud/memorandum-frontend:rel
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: memorandum-fe-service
spec:
  type: LoadBalancer
  selector:
    app: memorandum-fe
  ports:
    - protocol: TCP
      port: 8050
      targetPort: 80
  externalIPs:
  - "34.172.80.103"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memorandum-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: instance4.dufflin.com
    http:
      paths:
      - backend:
          service:
            name: memorandum-fe-service
            port:
              number: 8050
