k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memorandum-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  -  http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memorandum-fe-service
            port:
              number: 8050
